# SeminarioRustTrabajoFinal

./: Cargo.toml  lib.rs
trabajo_final/: Cargo.toml  fecha.rs  lib.rs  lib_sin_errores.txt
