[package]
name = "trabajo_final_reporte"
version = "0.1.0"
authors = ["Grupo 9"]
edition = "2021"

[dependencies]
ink = { version = "4.2.0", default-features = false }
ink_env = { version = "4.2.1", default-features = false }

scale = { package = "parity-scale-codec", version = "3", default-features = false, features = ["derive"] }
scale-info = { version = "2.6", default-features = false, features = ["derive"], optional = true }
trabajo_final = { path = "trabajo_final", default-features = false, features = ["ink-as-dependency"] }

[dev-dependencies]
ink_e2e = "4.2.0"

[lib]
path = "lib.rs"

[features]
default = ["std"]
std = [
    "ink/std",
    "ink_env/std",
    "scale/std",
    "scale-info/std",
    "trabajo_final/std",
]
ink-as-dependency = []
e2e-tests = []
